# PS_form_handler

./: Makefile.in  README  README.md  configure.ac
src/: addend.c  addend.h  multiplicand.c  multiplicand.h  parser.c  parser.h  psform.c  psform.h  psform_arithmetic.c  psform_arithmetic.h
test/: correct_output_1.txt  correct_output_13.txt  correct_output_19.txt  correct_output_2.txt  correct_output_20.txt  correct_output_21.txt  correct_output_22.txt  correct_output_4.txt  input_10.txt  input_11.txt  input_12.txt  input_13.txt  input_14.txt  input_15.txt  input_16.txt  input_17.txt  input_18.txt  input_19.txt  input_20.txt  input_21.txt  input_22.txt  input_23.txt  input_3.txt  input_4.txt  input_7.txt  input_8.txt  input_9.txt
